<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AuthActivity" android:animateLayoutChanges="true">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_icon_chatty_v2"
            android:layout_marginTop="32dp" tools:srcCompat="@drawable/ic_icon_chatty_v2"/>
    <TextView
            android:text="@string/auth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:textSize="18sp" android:layout_marginTop="32dp"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/auth_hint_email" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:hint="@string/auth_hint_password"
            android:layout_marginTop="32dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/auth_button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="#9753FF" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="80dp" app:layout_constraintBottom_toTopOf="@+id/textView2"
            android:textColor="@android:color/primary_text_dark"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:hint="@string/auth_hint_name"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:visibility="visible"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="128dp" app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/auth_method_switcher" android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>